--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "css-loader": "^4.3.0",
+    "file-loader": "^6.1.0",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0"
   }
 }
